[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/player.png" type="Texture" id=1]
[ext_resource path="res://characters/player.gd" type="Script" id=2]
[ext_resource path="res://assets/restart.png" type="Texture" id=3]
[ext_resource path="res://assets/restart_pressed.png" type="Texture" id=4]
[ext_resource path="res://assets/calibrate_y_pressed.png" type="Texture" id=5]
[ext_resource path="res://assets/calibrate_y.png" type="Texture" id=6]


[sub_resource type="CircleShape2D" id=1]
radius = 13.2352

[node name="Player" type="KinematicBody2D"]
position = Vector2( 271.895, 558.645 )
scale = Vector2( 0.439999, 0.439999 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 6.32, 6.32 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.72, 0.72 )
texture = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Gravity" type="Label" parent="CanvasLayer"]
margin_left = 32.758
margin_top = 43.6772
margin_right = 100.758
margin_bottom = 74.6772
rect_scale = Vector2( 2, 2 )
text = "Gyroscope
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="y_zero" type="Label" parent="CanvasLayer"]
margin_left = 35.9293
margin_top = 121.372
margin_right = 103.929
margin_bottom = 152.372
rect_scale = Vector2( 2, 2 )
text = "Gyroscope
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Velocity" type="Label" parent="CanvasLayer"]
margin_left = 35.2779
margin_top = 83.1548
margin_right = 103.278
margin_bottom = 114.155
rect_scale = Vector2( 2, 2 )
text = "Gyroscope
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 23.7842, 880.012 )
scale = Vector2( 0.399999, 0.399999 )
normal = ExtResource( 3 )
pressed = ExtResource( 4 )

[node name="CalibrateYButton" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 391.646, 867.327 )
scale = Vector2( 0.399999, 0.399999 )
normal = ExtResource( 6 )
pressed = ExtResource( 5 )
[connection signal="pressed" from="CanvasLayer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="CanvasLayer/CalibrateYButton" to="." method="_on_CalibrateYButton_pressed"]
